--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,10 @@
       "source": "/((?!api).*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/journal-ease/[...all].js": {
+      "includeFiles": "backend/**"
+    }
+  }
 }
