Fix: Add users catch-all to vercel.json functions config
- Added api/journal-ease/users/[...all].js to functions configuration
- This ensures Vercel properly recognizes and routes to the users catch-all handler
- Should fix 404 errors on POST /api/journal-ease/users/:userId/entries

--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,9 @@
   "functions": {
     "api/journal-ease/[...all].js": {
       "includeFiles": "backend/**"
+    },
+    "api/journal-ease/users/[...all].js": {
+      "includeFiles": "backend/**"
     }
   }
 }
