Fix: Add rewrite rule to ensure users routes go to main catch-all
- Added explicit rewrite rule for /api/journal-ease/users/* to route to main catch-all
- This ensures Vercel routes users requests correctly after removing users catch-all
- Should fix 404 errors on POST /api/journal-ease/users/:userId/entries

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
     {
       "source": "/((?!api).*)",
       "destination": "/index.html"
+    },
+    {
+      "source": "/api/journal-ease/users/:path*",
+      "destination": "/api/journal-ease/[...all]"
     }
   ],
   "functions": {
