Fix: Ensure backend dependencies are included in Vercel serverless functions

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,9 @@
   ],
   "functions": {
     "api/journal-ease/[...all].js": {
-      "includeFiles": "backend/**"
+      "includeFiles": "backend/**",
+      "runtime": "nodejs20.x",
+      "maxDuration": 30
     }
   }
 }
